--- a/offline_web/index.html
+++ b/offline_web/index.html
@@ -96,6 +96,6 @@
   <!-- 本地离线库（不要用 CDN；提前下载到 offline_web/libs/） -->
   <script src="./libs/ethers.umd.min.js"></script>
   <script src="./libs/qrcode.min.js"></script>
-  <script src="./app.js"></script>
+  <script src="./apps.js"></script>
 </body>
 </html>
